<resources>
    <string name="app_name">ProximityMap</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email address</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="create_account"><u>Create a new account</u></string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to registration -->
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="prompt_dob">Date of Birth</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">last name</string>

    <string name="auth_failed">Authentication failed</string>

</resources>
